# md2wx

./: .gitignore  LICENSE  README.md  pyproject.toml
md2wx/: __init__.py  __main__.py  app.py  styles.py
md2wx/static/css/: _basic.css  blue.css  cyan.css  rose.css  style.css
md2wx/static/js/: script.js
md2wx/templates/: wx.html
