[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "md2wx"
authors = [{name = "davycloud", email = "dawei.si@qq.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "Markdown >=3.3.0,<4.0.0",
    "python-frontmatter",
]

[project.urls]
Home = "https://github.com/davycloud/md2wx"

[project.scripts]
md2wx = "md2wx.app:main"
